fix: card wrapping

--- a/src/features/Overview/ProgramCacheCard/programCacheCard.module.css
+++ b/src/features/Overview/ProgramCacheCard/programCacheCard.module.css
@@ -6,6 +6,6 @@
 
   > div {
     flex: 1 1 auto;
-    min-width: 180px;
+    min-width: 100px;
   }
 }
